--- a/public/i18n/accounts/en.json
+++ b/public/i18n/accounts/en.json
@@ -14,6 +14,9 @@
   "T_ACCOUNTS_REJECT":          "Reject",
   "T_ACCOUNTS_VALID":           "Valid",
   "T_ACCOUNTS_USERPROFILE":     "User Profile",
+  "T_ACCOUNTS_VALIDUSER":       "Valid User",
+  "T_ACCOUNTS_INVALIDUSER":     "Invalid User",
+  "T_ACCOUNTS_APPLYUSER":       "Apply User",
   "T_ACCOUNTS_PRVLG_MODIFY":    "Permission(Modify)",
   "T_ACCOUNTS_PRVLG_CREATE":    "Permission(Create)",
   "T_ACCOUNTS_PRVLG_USERADMIN": "Permission(UserAdmin)",
@@ -23,5 +26,6 @@
   "T_ACCOUNTS_BTN_REGISTER":    "Register",
   "T_ACCOUNTS_BTN_RESET":       "Reset",
   "T_ACCOUNTS_BTN_UPDATE":      "Update",
-  "T_ACCOUNTS_ERR_LOGIN":       "Invalid username/password"
+  "T_ACCOUNTS_ERR_LOGIN":       "Invalid username/password",
+  "T_ACCOUNTS_MSG_RESETFINISH": "Reset finished"
 }
