accounts: change password

--- a/public/i18n/accounts/en.json
+++ b/public/i18n/accounts/en.json
@@ -3,10 +3,13 @@
   "T_ACCOUNTS_REGISTER":        "Register",
   "T_ACCOUNTS_LOGOUT":          "Logout",
   "T_ACCOUNTS_RESETPASSWORD":   "Reset Password",
+  "T_ACCOUNTS_CHANGEPASSWORD":  "Change Password",
   "T_ACCOUNTS_USERADMIN":       "User Admin",
   "T_ACCOUNTS_USERNAME":        "Username",
   "T_ACCOUNTS_PASSWORD":        "Password",
   "T_ACCOUNTS_VERIFYPASSWORD":  "Verify Password",
+  "T_ACCOUNTS_OLDPASSWORD":     "Old Password",
+  "T_ACCOUNTS_NEWPASSWORD":     "New Password",
   "T_ACCOUNTS_LASTNAME":        "LastName",
   "T_ACCOUNTS_FIRSTNAME":       "FirstName",
   "T_ACCOUNTS_RESETCODE":       "ResetCode",
@@ -25,6 +28,7 @@
   "T_ACCOUNTS_BTN_FORGOT":      "Forgot Password",
   "T_ACCOUNTS_BTN_REGISTER":    "Register",
   "T_ACCOUNTS_BTN_RESET":       "Reset",
+  "T_ACCOUNTS_BTN_CHANGE":      "Change",
   "T_ACCOUNTS_BTN_UPDATE":      "Update",
   "T_ACCOUNTS_ERR_LOGIN":       "Invalid username/password",
   "T_ACCOUNTS_MSG_RESETFINISH": "Reset finished"
