--- a/public/i18n/accounts/cn.json
+++ b/public/i18n/accounts/cn.json
@@ -3,10 +3,13 @@
   "T_ACCOUNTS_REGISTER":        "注册",
   "T_ACCOUNTS_LOGOUT":          "退出",
   "T_ACCOUNTS_RESETPASSWORD":   "重置密码",
+  "T_ACCOUNTS_CHANGEPASSWORD":  "修改密码",
   "T_ACCOUNTS_USERADMIN":       "用户管理",
   "T_ACCOUNTS_USERNAME":        "用户名",
   "T_ACCOUNTS_PASSWORD":        "密码",
   "T_ACCOUNTS_VERIFYPASSWORD":  "确认密码",
+  "T_ACCOUNTS_OLDPASSWORD":     "旧密码",
+  "T_ACCOUNTS_NEWPASSWORD":     "新密码",
   "T_ACCOUNTS_LASTNAME":        "姓",
   "T_ACCOUNTS_FIRSTNAME":       "名",
   "T_ACCOUNTS_RESETCODE":       "重置码",
@@ -25,6 +28,7 @@
   "T_ACCOUNTS_BTN_FORGOT":      "忘记密码",
   "T_ACCOUNTS_BTN_REGISTER":    "注册",
   "T_ACCOUNTS_BTN_RESET":       "重置",
+  "T_ACCOUNTS_BTN_CHANGE":      "修改",
   "T_ACCOUNTS_BTN_UPDATE":      "更新",
   "T_ACCOUNTS_ERR_LOGIN":       "用户名/密码错误",
   "T_ACCOUNTS_MSG_RESETFINISH": "重置完成"
