--- a/public/i18n/accounts/cn.json
+++ b/public/i18n/accounts/cn.json
@@ -1,4 +1,5 @@
 {
+  "T_ACCOUNTS_HOME":            "主页",
   "T_ACCOUNTS_LOGIN":           "登录",
   "T_ACCOUNTS_REGISTER":        "注册",
   "T_ACCOUNTS_LOGOUT":          "退出",
