--- a/public/i18n/accounts/en.json
+++ b/public/i18n/accounts/en.json
@@ -13,6 +13,7 @@
   "T_ACCOUNTS_NEWPASSWORD":     "New Password",
   "T_ACCOUNTS_LASTNAME":        "LastName",
   "T_ACCOUNTS_FIRSTNAME":       "FirstName",
+  "T_ACCOUNTS_WORKID":          "WorkID",
   "T_ACCOUNTS_RESETCODE":       "ResetCode",
   "T_ACCOUNTS_ACCEPT":          "Accept",
   "T_ACCOUNTS_REJECT":          "Reject",
