用户数据初期化处理，操作失败提示

--- a/public/i18n/accounts/en.json
+++ b/public/i18n/accounts/en.json
@@ -1,37 +1,43 @@
 {
-  "T_ACCOUNTS_HOME":            "HomePage",
-  "T_ACCOUNTS_LOGIN":           "Login",
-  "T_ACCOUNTS_REGISTER":        "Register",
-  "T_ACCOUNTS_LOGOUT":          "Logout",
-  "T_ACCOUNTS_RESETPASSWORD":   "Reset Password",
-  "T_ACCOUNTS_CHANGEPASSWORD":  "Change Password",
-  "T_ACCOUNTS_USERADMIN":       "User Admin",
-  "T_ACCOUNTS_USERNAME":        "Username",
-  "T_ACCOUNTS_PASSWORD":        "Password",
-  "T_ACCOUNTS_VERIFYPASSWORD":  "Verify Password",
-  "T_ACCOUNTS_OLDPASSWORD":     "Old Password",
-  "T_ACCOUNTS_NEWPASSWORD":     "New Password",
-  "T_ACCOUNTS_LASTNAME":        "LastName",
-  "T_ACCOUNTS_FIRSTNAME":       "FirstName",
-  "T_ACCOUNTS_WORKID":          "WorkID",
-  "T_ACCOUNTS_RESETCODE":       "ResetCode",
-  "T_ACCOUNTS_ACCEPT":          "Accept",
-  "T_ACCOUNTS_REJECT":          "Reject",
-  "T_ACCOUNTS_VALID":           "Valid",
-  "T_ACCOUNTS_USERPROFILE":     "User Profile",
-  "T_ACCOUNTS_VALIDUSER":       "Valid User",
-  "T_ACCOUNTS_INVALIDUSER":     "Invalid User",
-  "T_ACCOUNTS_APPLYUSER":       "Apply User",
-  "T_ACCOUNTS_PRVLG_MODIFY":    "Permission(Modify)",
-  "T_ACCOUNTS_PRVLG_CREATE":    "Permission(Create)",
-  "T_ACCOUNTS_PRVLG_USERADMIN": "Permission(UserAdmin)",
-  "T_ACCOUNTS_BTN_CLOSE":       "Close",
-  "T_ACCOUNTS_BTN_LOGIN":       "Log in",
-  "T_ACCOUNTS_BTN_FORGOT":      "Forgot Password",
-  "T_ACCOUNTS_BTN_REGISTER":    "Register",
-  "T_ACCOUNTS_BTN_RESET":       "Reset",
-  "T_ACCOUNTS_BTN_CHANGE":      "Change",
-  "T_ACCOUNTS_BTN_UPDATE":      "Update",
-  "T_ACCOUNTS_ERR_LOGIN":       "Invalid username/password",
-  "T_ACCOUNTS_MSG_RESETFINISH": "Reset finished"
+  "T_ACCOUNTS_HOME":              "HomePage",
+  "T_ACCOUNTS_LOGIN":             "Login",
+  "T_ACCOUNTS_REGISTER":          "Register",
+  "T_ACCOUNTS_LOGOUT":            "Logout",
+  "T_ACCOUNTS_RESETPASSWORD":     "Reset Password",
+  "T_ACCOUNTS_CHANGEPASSWORD":    "Change Password",
+  "T_ACCOUNTS_USERADMIN":         "User Admin",
+  "T_ACCOUNTS_USERNAME":          "Username",
+  "T_ACCOUNTS_PASSWORD":          "Password",
+  "T_ACCOUNTS_VERIFYPASSWORD":    "Verify Password",
+  "T_ACCOUNTS_OLDPASSWORD":       "Old Password",
+  "T_ACCOUNTS_NEWPASSWORD":       "New Password",
+  "T_ACCOUNTS_LASTNAME":          "LastName",
+  "T_ACCOUNTS_FIRSTNAME":         "FirstName",
+  "T_ACCOUNTS_WORKID":            "WorkID",
+  "T_ACCOUNTS_RESETCODE":         "ResetCode",
+  "T_ACCOUNTS_ACCEPT":            "Accept",
+  "T_ACCOUNTS_REJECT":            "Reject",
+  "T_ACCOUNTS_VALID":             "Valid",
+  "T_ACCOUNTS_USERPROFILE":       "User Profile",
+  "T_ACCOUNTS_VALIDUSER":         "Valid User",
+  "T_ACCOUNTS_INVALIDUSER":       "Invalid User",
+  "T_ACCOUNTS_APPLYUSER":         "Apply User",
+  "T_ACCOUNTS_PRVLG_MODIFY":      "Permission(Modify)",
+  "T_ACCOUNTS_PRVLG_CREATE":      "Permission(Create)",
+  "T_ACCOUNTS_PRVLG_USERADMIN":   "Permission(UserAdmin)",
+  "T_ACCOUNTS_BTN_CLOSE":         "Close",
+  "T_ACCOUNTS_BTN_LOGIN":         "Log in",
+  "T_ACCOUNTS_BTN_FORGOT":        "Forgot Password",
+  "T_ACCOUNTS_BTN_REGISTER":      "Register",
+  "T_ACCOUNTS_BTN_RESET":         "Reset",
+  "T_ACCOUNTS_BTN_CHANGE":        "Change",
+  "T_ACCOUNTS_BTN_UPDATE":        "Update",
+  "T_ACCOUNTS_ERR_LOGIN":         "Invalid username/password",
+  "T_ACCOUNTS_ERR_CHANGE":        "Failed to change password",
+  "T_ACCOUNTS_ERR_FORGOT":        "Invalid username",
+  "T_ACCOUNTS_ERR_PROFILE":       "Failed to update user's information",
+  "T_ACCOUNTS_MSG_CHANGEFINISH":  "Please use new password to login",
+  "T_ACCOUNTS_MSG_FORGOTFINISH":  "Please check password reset mail",
+  "T_ACCOUNTS_MSG_PROFILEFINISH": "Update user's information finished",
+  "T_ACCOUNTS_MSG_RESETFINISH":   "Reset finished"
 }
