--- a/public/i18n/accounts/cn.json
+++ b/public/i18n/accounts/cn.json
@@ -1,37 +1,43 @@
 {
-  "T_ACCOUNTS_HOME":            "主页",
-  "T_ACCOUNTS_LOGIN":           "登录",
-  "T_ACCOUNTS_REGISTER":        "注册",
-  "T_ACCOUNTS_LOGOUT":          "退出",
-  "T_ACCOUNTS_RESETPASSWORD":   "重置密码",
-  "T_ACCOUNTS_CHANGEPASSWORD":  "修改密码",
-  "T_ACCOUNTS_USERADMIN":       "用户管理",
-  "T_ACCOUNTS_USERNAME":        "用户名",
-  "T_ACCOUNTS_PASSWORD":        "密码",
-  "T_ACCOUNTS_VERIFYPASSWORD":  "确认密码",
-  "T_ACCOUNTS_OLDPASSWORD":     "旧密码",
-  "T_ACCOUNTS_NEWPASSWORD":     "新密码",
-  "T_ACCOUNTS_LASTNAME":        "姓",
-  "T_ACCOUNTS_FIRSTNAME":       "名",
-  "T_ACCOUNTS_WORKID":          "工号",
-  "T_ACCOUNTS_RESETCODE":       "重置码",
-  "T_ACCOUNTS_ACCEPT":          "同意",
-  "T_ACCOUNTS_REJECT":          "拒绝",
-  "T_ACCOUNTS_VALID":           "有效",
-  "T_ACCOUNTS_USERPROFILE":     "用户信息",
-  "T_ACCOUNTS_VALIDUSER":       "有效用户",
-  "T_ACCOUNTS_INVALIDUSER":     "无效用户",
-  "T_ACCOUNTS_APPLYUSER":       "申请用户",
-  "T_ACCOUNTS_PRVLG_MODIFY":    "修改权限",
-  "T_ACCOUNTS_PRVLG_CREATE":    "创建权限",
-  "T_ACCOUNTS_PRVLG_USERADMIN": "用户管理权限",
-  "T_ACCOUNTS_BTN_CLOSE":       "关闭",
-  "T_ACCOUNTS_BTN_LOGIN":       "登录",
-  "T_ACCOUNTS_BTN_FORGOT":      "忘记密码",
-  "T_ACCOUNTS_BTN_REGISTER":    "注册",
-  "T_ACCOUNTS_BTN_RESET":       "重置",
-  "T_ACCOUNTS_BTN_CHANGE":      "修改",
-  "T_ACCOUNTS_BTN_UPDATE":      "更新",
-  "T_ACCOUNTS_ERR_LOGIN":       "用户名/密码错误",
-  "T_ACCOUNTS_MSG_RESETFINISH": "重置完成"
+  "T_ACCOUNTS_HOME":              "主页",
+  "T_ACCOUNTS_LOGIN":             "登录",
+  "T_ACCOUNTS_REGISTER":          "注册",
+  "T_ACCOUNTS_LOGOUT":            "退出",
+  "T_ACCOUNTS_RESETPASSWORD":     "重置密码",
+  "T_ACCOUNTS_CHANGEPASSWORD":    "修改密码",
+  "T_ACCOUNTS_USERADMIN":         "用户管理",
+  "T_ACCOUNTS_USERNAME":          "用户名",
+  "T_ACCOUNTS_PASSWORD":          "密码",
+  "T_ACCOUNTS_VERIFYPASSWORD":    "确认密码",
+  "T_ACCOUNTS_OLDPASSWORD":       "旧密码",
+  "T_ACCOUNTS_NEWPASSWORD":       "新密码",
+  "T_ACCOUNTS_LASTNAME":          "姓",
+  "T_ACCOUNTS_FIRSTNAME":         "名",
+  "T_ACCOUNTS_WORKID":            "工号",
+  "T_ACCOUNTS_RESETCODE":         "重置码",
+  "T_ACCOUNTS_ACCEPT":            "同意",
+  "T_ACCOUNTS_REJECT":            "拒绝",
+  "T_ACCOUNTS_VALID":             "有效",
+  "T_ACCOUNTS_USERPROFILE":       "用户信息",
+  "T_ACCOUNTS_VALIDUSER":         "有效用户",
+  "T_ACCOUNTS_INVALIDUSER":       "无效用户",
+  "T_ACCOUNTS_APPLYUSER":         "申请用户",
+  "T_ACCOUNTS_PRVLG_MODIFY":      "修改权限",
+  "T_ACCOUNTS_PRVLG_CREATE":      "创建权限",
+  "T_ACCOUNTS_PRVLG_USERADMIN":   "用户管理权限",
+  "T_ACCOUNTS_BTN_CLOSE":         "关闭",
+  "T_ACCOUNTS_BTN_LOGIN":         "登录",
+  "T_ACCOUNTS_BTN_FORGOT":        "忘记密码",
+  "T_ACCOUNTS_BTN_REGISTER":      "注册",
+  "T_ACCOUNTS_BTN_RESET":         "重置",
+  "T_ACCOUNTS_BTN_CHANGE":        "修改",
+  "T_ACCOUNTS_BTN_UPDATE":        "更新",
+  "T_ACCOUNTS_ERR_LOGIN":         "用户名/密码错误",
+  "T_ACCOUNTS_ERR_CHANGE":        "修改密码失败",
+  "T_ACCOUNTS_ERR_FORGOT":        "用户名错误",
+  "T_ACCOUNTS_ERR_PROFILE":       "用户信息更新失败",
+  "T_ACCOUNTS_MSG_CHANGEFINISH":  "请使用新密码登陆",
+  "T_ACCOUNTS_MSG_FORGOTFINISH":  "请查看密码重置邮件",
+  "T_ACCOUNTS_MSG_PROFILEFINISH": "用户信息更新完成",
+  "T_ACCOUNTS_MSG_RESETFINISH":   "重置完成"
 }
