个人情报增加"性别"

--- a/public/i18n/accounts/cn.json
+++ b/public/i18n/accounts/cn.json
@@ -13,6 +13,9 @@
   "T_ACCOUNTS_NEWPASSWORD":       "新密码",
   "T_ACCOUNTS_LASTNAME":          "姓",
   "T_ACCOUNTS_FIRSTNAME":         "名",
+  "T_ACCOUNTS_GENDER":            "性别",
+  "T_ACCOUNTS_GENDER_MALE":       "男",
+  "T_ACCOUNTS_GENDER_FEMALE":     "女",
   "T_ACCOUNTS_WORKID":            "工号",
   "T_ACCOUNTS_RESETCODE":         "重置码",
   "T_ACCOUNTS_ACCEPT":            "同意",
