项目管理框架

--- a/public/i18n/projects/cn.json
+++ b/public/i18n/projects/cn.json
@@ -1,8 +1,29 @@
 {
-  "T_PROJECTS_HOME":            "主页",
-  "T_PROJECTS_LIST":            "项目一览",
-  "T_PROJECTS_DETAIL":          "项目详细",
-  "T_PROJECTS_CUSTOMER":        "客户",
-  "T_PROJECTS_PRJNAMEC":        "客户项目名",
-  "T_PROJECTS_PRJNAMEK":        "光庭项目名"
+  "T_PROJECTS_HOME":             "主页",
+  "T_PROJECTS_LIST":             "项目一览",
+  "T_PROJECTS_DETAIL":           "项目详细",
+  "T_PROJECTS_NAME":             "项目名称",
+  "T_PROJECTS_STATUS":           "状态",
+  "T_PROJECTS_CUSTOMER":         "客户信息",
+  "T_PROJECTS_CONTENT":          "作业内容",
+  "T_PROJECTS_LEADER":           "负责人",
+  "T_PROJECTS_MEMBER":           "成员",
+  "T_PROJECTS_STARTDATE_PUBLIC": "外部公开开始日期",
+  "T_PROJECTS_STARTDATE_PLAN":   "内部计划开始日期",
+  "T_PROJECTS_STARTDATE_FACT":   "内部实际开始日期",
+  "T_PROJECTS_ENDDATE_PUBLIC":   "外部公开结束日期",
+  "T_PROJECTS_ENDDATE_PLAN":     "内部计划结束日期",
+  "T_PROJECTS_ENDDATE_FACT":     "内部实际结束日期",
+  "T_PROJECTS_COST_PUBLIC":      "外部公开工时",
+  "T_PROJECTS_COST_PLAN":        "内部计划工时",
+  "T_PROJECTS_COST_FACT":        "内部实际工时",
+  "T_PROJECTS_COST_UNIT":        "人日",
+  "T_PROJECTS_WORKPLACE":        "作业场所",
+  "T_PROJECTS_PERSON_SELECTED":  "已选人员",
+  "T_PROJECTS_CHOOSE_CUSTOMER":  "选择客户",
+  "T_PROJECTS_CHOOSE_LEADER":    "选择负责人",
+  "T_PROJECTS_CHOOSE_MEMBER":    "选择成员",
+  "T_PROJECTS_BTN_CLOSE":        "关闭",
+  "T_PROJECTS_BTN_CHOOSE":       "选择",
+  "T_PROJECTS_BTN_UPDATE":       "更新"
 }
