--- a/public/i18n/projects/en.json
+++ b/public/i18n/projects/en.json
@@ -1,8 +1,29 @@
 {
-  "T_PROJECTS_HOME":            "HomePage",
-  "T_PROJECTS_LIST":            "Project List",
-  "T_PROJECTS_DETAIL":          "Project Detail",
-  "T_PROJECTS_CUSTOMER":        "Customer",
-  "T_PROJECTS_PRJNAMEC":        "Customer Project Name",
-  "T_PROJECTS_PRJNAMEK":        "Kotei Project Name"
+  "T_PROJECTS_HOME":             "HomePage",
+  "T_PROJECTS_LIST":             "Project List",
+  "T_PROJECTS_DETAIL":           "Project Detail",
+  "T_PROJECTS_NAME":             "Project Name",
+  "T_PROJECTS_STATUS":           "Status",
+  "T_PROJECTS_CUSTOMER":         "Customer",
+  "T_PROJECTS_CONTENT":          "Work Scope",
+  "T_PROJECTS_LEADER":           "Leader",
+  "T_PROJECTS_MEMBER":           "Member",
+  "T_PROJECTS_STARTDATE_PUBLIC": "Start Date(Public)",
+  "T_PROJECTS_STARTDATE_PLAN":   "Start Date(Plan)",
+  "T_PROJECTS_STARTDATE_FACT":   "Start Date(Fact)",
+  "T_PROJECTS_ENDDATE_PUBLIC":   "End Date(Public)",
+  "T_PROJECTS_ENDDATE_PLAN":     "End Date(Plan)",
+  "T_PROJECTS_ENDDATE_FACT":     "End Date(Fact)",
+  "T_PROJECTS_COST_PUBLIC":      "Cost(Public)",
+  "T_PROJECTS_COST_PLAN":        "Cost(Plan)",
+  "T_PROJECTS_COST_FACT":        "Cost(Fact)",
+  "T_PROJECTS_COST_UNIT":        "Work Day(s)",
+  "T_PROJECTS_WORKPLACE":        "Work Place",
+  "T_PROJECTS_PERSON_SELECTED":  "Selected",
+  "T_PROJECTS_CHOOSE_CUSTOMER":  "Choose Customer",
+  "T_PROJECTS_CHOOSE_LEADER":    "Choose Leader",
+  "T_PROJECTS_CHOOSE_MEMBER":    "Choose Member",
+  "T_PROJECTS_BTN_CLOSE":        "Close",
+  "T_PROJECTS_BTN_CHOOSE":       "Choose",
+  "T_PROJECTS_BTN_UPDATE":       "Update"
 }
