项目管理:修改功能

--- a/public/i18n/projects/cn.json
+++ b/public/i18n/projects/cn.json
@@ -4,6 +4,10 @@
   "T_PROJECTS_DETAIL":           "项目详细",
   "T_PROJECTS_NAME":             "项目名称",
   "T_PROJECTS_STATUS":           "状态",
+  "T_PROJECTS_STATUS_TODO":      "计划中",
+  "T_PROJECTS_STATUS_DOING":     "进行中",
+  "T_PROJECTS_STATUS_DONE":      "完成",
+  "T_PROJECTS_STATUS_CANCELLED": "取消",
   "T_PROJECTS_CUSTOMER":         "客户信息",
   "T_PROJECTS_CONTENT":          "作业内容",
   "T_PROJECTS_LEADER":           "负责人",
