--- a/public/i18n/projects/en.json
+++ b/public/i18n/projects/en.json
@@ -4,6 +4,10 @@
   "T_PROJECTS_DETAIL":           "Project Detail",
   "T_PROJECTS_NAME":             "Project Name",
   "T_PROJECTS_STATUS":           "Status",
+  "T_PROJECTS_STATUS_TODO":      "ToDo",
+  "T_PROJECTS_STATUS_DOING":     "Doing",
+  "T_PROJECTS_STATUS_DONE":      "Done",
+  "T_PROJECTS_STATUS_CANCELLED": "Cancelled",
   "T_PROJECTS_CUSTOMER":         "Customer",
   "T_PROJECTS_CONTENT":          "Work Scope",
   "T_PROJECTS_LEADER":           "Leader",
