客户增加功能

--- a/public/i18n/crms/cn.json
+++ b/public/i18n/crms/cn.json
@@ -6,15 +6,24 @@
   "T_CRMS_COMPANY_NAME":               "公司名",
   "T_CRMS_COMPANY_VALID":              "有效",
   "T_CRMS_COMPANY_MEMO":               "备注",
+  "T_CRMS_COMPANY_STATUS_VALID":       "有效公司",
+  "T_CRMS_COMPANY_STATUS_INVALID":     "无效公司",
   "T_CRMS_PROFILE_CUSTOMER":           "客户信息",
   "T_CRMS_CUSTOMER_LASTNAME":          "姓",
   "T_CRMS_CUSTOMER_FIRSTNAME":         "名",
   "T_CRMS_CUSTOMER_VALID":             "有效",
   "T_CRMS_CUSTOMER_EMAIL":             "邮箱",
   "T_CRMS_CUSTOMER_MEMO":              "备注",
+  "T_CRMS_CUSTOMER_STATUS_VALID":      "有效客户",
+  "T_CRMS_CUSTOMER_STATUS_INVALID":    "无效客户",
+  "T_CRMS_BTN_ADD":                    "新建",
   "T_CRMS_BTN_UPDATE":                 "更新",
+  "T_CRMS_ERR_COMPANY_ADD":            "公司信息新建失败",
   "T_CRMS_ERR_COMPANY_PROFILE":        "公司信息更新失败",
+  "T_CRMS_ERR_CUSTOMER_ADD":           "客户信息新建失败",
   "T_CRMS_ERR_CUSTOMER_PROFILE":       "客户信息更新失败",
+  "T_CRMS_MSG_COMPANY_ADDFINISH":      "公司信息新建完成",
   "T_CRMS_MSG_COMPANY_PROFILEFINISH":  "公司信息更新完成",
+  "T_CRMS_MSG_CUSTOMER_ADDFINISH":     "客户信息新建完成",
   "T_CRMS_MSG_CUSTOMER_PROFILEFINISH": "客户信息更新完成"
 }
