--- a/public/i18n/crms/en.json
+++ b/public/i18n/crms/en.json
@@ -6,15 +6,24 @@
   "T_CRMS_COMPANY_NAME":               "Company Name",
   "T_CRMS_COMPANY_VALID":              "Valid",
   "T_CRMS_COMPANY_MEMO":               "Memo",
+  "T_CRMS_COMPANY_STATUS_VALID":       "Valid Company",
+  "T_CRMS_COMPANY_STATUS_INVALID":     "Invalid Company",
   "T_CRMS_PROFILE_CUSTOMER":           "Customer Profile",
   "T_CRMS_CUSTOMER_LASTNAME":          "Last Name",
   "T_CRMS_CUSTOMER_FIRSTNAME":         "First Name",
   "T_CRMS_CUSTOMER_VALID":             "Valid",
   "T_CRMS_CUSTOMER_EMAIL":             "Email",
   "T_CRMS_CUSTOMER_MEMO":              "Memo",
+  "T_CRMS_CUSTOMER_STATUS_VALID":      "Valid Customer",
+  "T_CRMS_CUSTOMER_STATUS_INVALID":    "Invalid Customer",
+  "T_CRMS_BTN_ADD":                    "Add",
   "T_CRMS_BTN_UPDATE":                 "Update",
+  "T_CRMS_ERR_COMPANY_ADD":            "Failed to add new company's information",
   "T_CRMS_ERR_COMPANY_PROFILE":        "Failed to update company's information",
+  "T_CRMS_ERR_CUSTOMER_ADD":           "Failed to add new customer's information",
   "T_CRMS_ERR_CUSTOMER_PROFILE":       "Failed to update customer's information",
+  "T_CRMS_MSG_COMPANY_ADDFINISH":      "Add new company's information finished",
   "T_CRMS_MSG_COMPANY_PROFILEFINISH":  "Update company's information finished",
+  "T_CRMS_MSG_CUSTOMER_ADDFINISH":     "Add new customer's information finished",
   "T_CRMS_MSG_CUSTOMER_PROFILEFINISH": "Update customer's information finished"
 }
