--- a/public/js/memo.org
+++ b/public/js/memo.org
@@ -110,20 +110,20 @@
 *** directives.js
     页面部件的模块化（非必须）
 ** 权限控制
-   | 模块     | 功能         | 用户管理 | 创建 | 修改 | 无                   |
-   |----------+--------------+----------+------+------+----------------------|
-   | /        |              | <        |      |      | >                    |
-   | 帐户管理 | 用户基础数据 | R/W      | -    | -    | R(all)/W(self)       |
-   |          | 用户机密数据 | R/W      | -    | -    | -                    |
-   |          | 用户申请     | R/W      | -    | -    | -                    |
-   |          | 密码管理     | W        | -    | -    | W(self)              |
-   |----------+--------------+----------+------+------+----------------------|
-   | 客户管理 | 公司数据     | -        | R/W  | -    | R                    |
-   |          | 客户数据     | -        | R/W  | -    | R                    |
-   |----------+--------------+----------+------+------+----------------------|
-   | 项目管理 | 项目全体数据 | -        | R/W  | -    | R                    |
-   |          | 项目实时数据 | -        | -    | R/W  | R                    |
-   |----------+--------------+----------+------+------+----------------------|
+   | 模块     | 功能         | 用户管理 | 创建 | 修改 | 无             |
+   |----------+--------------+----------+------+------+----------------|
+   | /        |              | <        |      |      | >              |
+   | 帐户管理 | 用户基础数据 | R/W      | -    | -    | R(all)/W(self) |
+   |          | 用户机密数据 | R/W      | -    | -    | R(self)        |
+   |          | 用户申请     | R/W      | -    | -    | -              |
+   |          | 密码管理     | W        | -    | -    | W(self)        |
+   |----------+--------------+----------+------+------+----------------|
+   | 客户管理 | 公司数据     | -        | R/W  | -    | R              |
+   |          | 客户数据     | -        | R/W  | -    | R              |
+   |----------+--------------+----------+------+------+----------------|
+   | 项目管理 | 项目全体数据 | -        | R/W  | -    | R              |
+   |          | 项目实时数据 | -        | -    | R/W  | R              |
+   |----------+--------------+----------+------+------+----------------|
 * 代码模板
 ** xxxModule.js
    #+BEGIN_SRC js
