--- a/public/i18n/homes/cn.json
+++ b/public/i18n/homes/cn.json
@@ -3,6 +3,7 @@
   "T_HOMES_ITEM_ACCOUNT":       "帐户管理",
   "T_HOMES_ITEM_PROJECT":       "项目管理",
   "T_HOMES_ITEM_CRM":           "客户管理",
+  "T_HOMES_ITEM_FINANCE":       "财务管理",
   "T_HOMES_ITEM_SETTING":       "设定",
   "T_HOMES_SETTING_LANGUAGE":   "语言",
   "T_HOMES_BTN_CLOSE":          "关闭",
