--- a/public/i18n/homes/en.json
+++ b/public/i18n/homes/en.json
@@ -3,6 +3,7 @@
   "T_HOMES_ITEM_ACCOUNT":       "Account Management",
   "T_HOMES_ITEM_PROJECT":       "Project Management",
   "T_HOMES_ITEM_CRM":           "Customer Management",
+  "T_HOMES_ITEM_FINANCE":       "Finance Management",
   "T_HOMES_ITEM_SETTING":       "Setting",
   "T_HOMES_SETTING_LANGUAGE":   "Language",
   "T_HOMES_BTN_CLOSE":          "Close",
